# car_robot

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/car_interfaces/: CMakeLists.txt  package.xml
src/car_interfaces/action/: Carmove.action
src/car_interfaces/msg/: Encoder.msg
src/car_motor_control/: CMakeLists.txt  package.xml
src/car_motor_control/drivers/AdafruitMotorHatLibrary/: i2cdevice.cpp
src/car_motor_control/launch/: car_action_server.launch.py  car_pose.launch.py  car_robot.launch.py  joy_car_robot.launch.py  motor_controller.launch.py  motor_encoder.launch.py  pantilt.launch.py  relative_speeds.launch.py
src/car_motor_control/libraries/i2c_driver/: i2c_driver.cpp  i2c_driver.h
src/car_motor_control/libraries/pca9685/: pca9685.cpp  pca9685.h  pca9685_constants.h
src/car_motor_control/src/: action_client.cpp  car_action_server.cpp  car_pose.cpp  joystick_car_control.cpp  motor_controller.cpp  motor_encoder.cpp  pantilt.cpp  pca9685SetUp.h  relative_speeds.cpp
src/car_motor_control/src/utils/: pca9685SetUp.cpp  pca9685SetUp.h
src/joy/launch/: joy.launch.py
src/object_detect_camera/: CMakeLists.txt  package.xml
src/object_detect_camera/launch/: detectnet.launch.py  imagenet.launch.py  proj_w_joy.launch.py  proj_w_tracking.launch.py  project.launch.py  tracking.launch.py  video_output.launch.py  video_source.launch.py  video_viewer.launch.py
src/object_detect_camera/src/: detectnet.cpp  image_converter.cpp  image_converter.h  imagenet.cpp  node_video_output.cpp  node_video_source.cpp  ros2_definitions.cpp  ros2_definitions.h  tracking.cpp  tracking.tmp
src/object_detect_camera/src/utils/: pid.cpp  pid.h
